
* ``bzr break-lock --config [location]`` can now break config files
  locks. (Vincent Ladeuil, #525571)

* ``bzrlib.config.LockableConfig`` is a base class for config files that
  needs to be protected against multiple writers. All methods that
  change a configuration variable value must be decorated with
  @needs_write_lock (set_option() for example).
  (Vincent Ladeuil,  #525571)

* The ``lp:`` prefix will now use your known username (from
  ``bzr launchpad-login``) to expand ``~`` to your username.  For example:
  ``bzr launchpad-login user && bzr push lp:~/project/branch`` will now
  push to ``lp:~user/project/branch``.  (John Arbash Meinel)

* New development format ``development8-subtree`` which is similar to the 
  ``2a`` format and adds subtree support. (Jelmer Vernooij)

Bug Fixes
*********

* Allow using both --using and --diff-options. 
  (Matthäus G. Chajdas, #234708)

* ``bzr add SYMLINK/FILE`` now works properly when the symlink points to a
  previously-unversioned directory within the tree: the directory is
  marked versioned too.  
  (Martin Pool, #192859)

* ``bzr ignore PATTERNS`` exits with error if a bad pattern is supplied.
  ``InvalidPattern`` exception error message now shows faulting
  regular expression.
  (Parth Malwankar #300062)

* ``clean-tree`` issues a warning if it is unable to delete a file
  due to ``errno.EACCES`` instead of exiting with an error on Windows.
  (Parth Malwankar, #430785)

* CommitBuilder now uses the committer instead of _config.username to generate
  the revision-id.  (Aaron Bentley, #614404)

* Configuration files in ``${BZR_HOME}`` are now protected against
  concurrent writers by using a lock. (Vincent Ladeuil, #525571)

* Cope with Microsoft FTP Server and VSFTPd that return reply '250
  Directory created' when mkdir succeeds.  (Martin Pool, #224373)

* Decrease peak memory during ``bzr send``. The old code was caching all
  text content and all inventory strings for all revisions before